'improved expand/collapse icon (issue #4)'

--- a/app/client/styles/diff.less
+++ b/app/client/styles/diff.less
@@ -9,3 +9,11 @@
   overflow: auto;
   border: solid 1px gray;
 }
+
+.diff .expand-icon::before {
+  content:"\25BC";
+}
+
+.diff .collapse-icon::before {
+  content:"\25BA";
+}
